# SDrone

./: CMakeLists.txt  Communicatie Protocol Definitie V2.docx  Communicatie Protocol Definitie.docx  Communication.c  Communication.h  Main.c  Makefile  README.md  Research Communication Drone.docx  hamming.c  hamming.h  main  protocolLayer.c  protocolLayer.h  sdkconfig  test_communication  test_protocollayer
.github/ISSUE_TEMPLATE/: user-story.md
Firmware/: CMakeLists.txt  configuration.h  firmware.elf  main.c  makefile
Firmware/hal/gpio/: gpio.c  gpio.h  gpio_config.h  gpio_types.h
Firmware/hal/irq/: irq.c  irq.h
Firmware/hal/spi/: spi.c  spi.h  spi_config.h  spi_registers.h  spi_types.h
Firmware/hal/spi2/: spi2.c  spi2.h
Firmware/hal/sx1278/: sx1278.c  sx1278_config.c  sx1278_config.h  sx1278_debug.c  sx1278_defs.h  sx1278_fifo.c  sx1278_fifo.h  sx1278_irq.c  sx1278_irq.h  sx1278_mode.c  sx1278_mode.h  sx1278_pins.c  sx1278_spi.c  sx1278_spi.h
Firmware/services/circularbuffer/: circularbuffer.c  circularbuffer.h
Firmware/services/hamming/: hamming.c  hamming.h  hamming_types.h
Firmware/services/protocol/: protocol_handler.c
Firmware/utils/: debug.c
