idf_component_register(
  SRCS 
       "main.c"
       "utils/debug.c"
       "services/circularbuffer/circularbuffer.c"
       "services/hamming/hamming.c"
       "services/protocol/protocol_handler.c"
       "hal/spi/spi.c"
       "hal/gpio/gpio.c"
  INCLUDE_DIRS 
       "core"
       "hal/spi"
       "hal/gpio"
       "services/circularbuffer"
       "services/hamming"
       "services/protocol"
       "utils"
  REQUIRES 
       driver
)
